add styles for head and projects

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -9,16 +9,27 @@
   // margin-top: -3rem;
 }
 
+#first {
+  background-color: rgba(255, 0, 0, .2);
+  color: white;
+}
+
+.head-holder {
+  display: flex;
+  flex-direction: row;
+}
+
 .touchless {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
   h1 {
-    margin: 0 auto -.5rem auto;
-    padding: 0 auto;
-    font-weight: normal;
-    text-transform: lowercase;
+    margin: 0 1rem -.5rem 1rem;
+    // font-weight: normal;
+    text-transform: uppercase;
+    font-size: 9rem;
+    letter-spacing: -1.5vw;
   }
   p {
     margin-top: 13rem;
@@ -27,33 +38,76 @@
   }
   h2 {
     margin-top: -1rem;
-    font-size: 2rem;
-  }
-}
-
-#second {
-  background-color: rgba(255, 0, 0, .2);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  text-align: center;
-  h2 {
-    font-weight: normal;
-    text-transform: uppercase;
-  }
-  p {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     text-transform: lowercase;
   }
 }
 
+#second {
+  background-color: rgba(232, 215, 196, 1);
+  color: white;
+  text-align: center;
+
+  h2 {
+    font-weight: normal;
+    text-transform: uppercase;
+    margin: 0 auto;
+  }
+  p {
+    font-size: 1.25rem;
+    text-transform: lowercase;
+    margin-top: -.9rem;
+  }
+  .alien-p {
+    margin-top: 1.5rem;
+  }
+}
+
+.alien-icon {
+  height: 12rem;
+  width: 12rem;
+  border-radius: 100%;
+  border: 5px solid white;
+  background-color: transparent;
+}
+
+.projects {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#business-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
+  font-size: 15rem;
+}
+
 #third {
-  background-color: rgba(13,121,255,.2);
+  background-color: rgba(215,233,255,1);
+  color: white;
+  h2 {
+    font-weight: normal;
+    text-transform: uppercase;
+  }
 }
 
 #fourth {
-  background-color: rgba(0,178,51,.2);
+  background-color: rgba(215,196,232,1);
+  color: white;
+  h2 {
+    font-weight: normal;
+    text-transform: uppercase;
+  }
 }
+
+a {
+  color: white;
+}
+
+.git-link {
+  height: 1.25rem;
+  margin-bottom: 3rem;
+}
+
+
 
