--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>666</title>
+    <script src="https://use.fontawesome.com/c741bb9792.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Overpass:100" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -10,7 +12,9 @@
     <div id="fullpage">
       <div class="section" id='first'>
         <div class='touchless'>
-          <h1>dain chatel</h1>
+          <div class='head-holder'>
+            <h1>dain</h1><h1>chatel</h1>
+          </div>
           <h2>full stack developer</h2>
           <p>touchless // wave hand up to scroll</p>
         </div>
@@ -25,29 +29,61 @@
         <div class='slide'>
           <div class='projects'>
             <h2>here</h2>
+            <a href='https://ns-oomnvlkqtp.now.sh/'><i id='business-icon' class="material-icons">business</i></a>
+            <p>a personal restaurant tracker built with react, react router + firebase</p>
+            <a class= 'git-link' href='https://github.com/dainchatel/HereApp'><i class="fa fa-github"></i></a>
+          </div>
+        </div>
+        <div class='slide'>
+          <div class='projects'>
+            <h2>palette.js</h2>
+            <a href='#'><i id='color-icon' class="material-icons">invert_colors</i></a>
+            <p>keep track of rgb and hex values while coding</p>
+            <a class='git-link' href='#'><i class="fa fa-github"></i></a>
           </div>
         </div>
         <div class='slide'>
           <div class='projects'>
             <h2>c+me</h2>
+            <a href='https://whispering-river-97765.herokuapp.com/'><i id='chat-icon' class="material-icons">chat</i></a>
+            <p>a video dating app built with node/express + postgresql</p>
+            <a class= 'git-link' href='https://github.com/dainchatel/irl'><i class="fa fa-github"></i></a>
           </div>
         </div>
         <div class='slide'>
           <div class='projects'>
             <h2>skycast</h2>
+            <a href='https://intense-refuge-90705.herokuapp.com/'><i id='location_on-icon' class="material-icons">location_on</i></a>
+            <p>a weather app built with node/express, postgresql, dark sky + google maps REST api</p>
+            <a class= 'git-link' href='https://github.com/dainchatel/nuweather'><i class="fa fa-github"></i></a>
+          </div>
+        </div>
+        <div class='slide'>
+          <div class='projects'>
+            <h2>horrorater</h2>
+            <a href='#'><i id='camera-icon' class="material-icons">videocam</i></a>
+            <p>a 'scariness aggregator' crud built with ruby and react on rails</p>
+            <a class='git-link' href='#'><i class="fa fa-github"></i></a>
           </div>
         </div>
         <div class='slide'>
           <div class='projects'>
             <h2>alien doctor</h2>
+            <a href='http://aliendoctor.bitballoon.com/'><div class='alien-icon'></div></a>
+            <p class='alien-p'>a dom manipulation game built with jquery + css animations</p>
+            <a class='git-link' href='https://github.com/dainchatel/aliendoctor'><i class="fa fa-github"></i></a>
           </div>
         </div>
       </div>
       <div class="section" id='third'>
-        <div class='touchless'>three</div>
+        <div class='contact'>
+          <h2>contact</h2>
+        </div>
       </div>
       <div class="section" id='fourth'>
-        <div class='touchless'>four</div>
+        <div class='bonus'>
+          <h2>bonus</h2>
+        </div>
       </div>
     </div>
     <script
