--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,43 +6,83 @@
   font-size: 3rem;
   text-align: center; }
 
+#first {
+  background-color: rgba(255, 0, 0, 0.2);
+  color: white; }
+
+.head-holder {
+  display: flex;
+  flex-direction: row; }
+
 .touchless {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 0 auto; }
   .touchless h1 {
-    margin: 0 auto -.5rem auto;
-    padding: 0 auto;
-    font-weight: normal;
-    text-transform: lowercase; }
+    margin: 0 1rem -.5rem 1rem;
+    text-transform: uppercase;
+    font-size: 9rem;
+    letter-spacing: -1.5vw; }
   .touchless p {
     margin-top: 13rem;
     font-size: 1rem;
     text-transform: lowercase; }
   .touchless h2 {
     margin-top: -1rem;
-    font-size: 2rem; }
+    font-size: 1.8rem;
+    text-transform: lowercase; }
 
 #second {
-  background-color: rgba(255, 0, 0, 0.2);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: #e8d7c4;
   color: white;
   text-align: center; }
   #second h2 {
     font-weight: normal;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin: 0 auto; }
   #second p {
-    font-size: 1.5rem;
-    text-transform: lowercase; }
+    font-size: 1.25rem;
+    text-transform: lowercase;
+    margin-top: -.9rem; }
+  #second .alien-p {
+    margin-top: 1.5rem; }
+
+.alien-icon {
+  height: 12rem;
+  width: 12rem;
+  border-radius: 100%;
+  border: 5px solid white;
+  background-color: transparent; }
+
+.projects {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center; }
+
+#business-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
+  font-size: 15rem; }
 
 #third {
-  background-color: rgba(13, 121, 255, 0.2); }
+  background-color: #d7e9ff;
+  color: white; }
+  #third h2 {
+    font-weight: normal;
+    text-transform: uppercase; }
 
 #fourth {
-  background-color: rgba(0, 178, 51, 0.2); }
+  background-color: #d7c4e8;
+  color: white; }
+  #fourth h2 {
+    font-weight: normal;
+    text-transform: uppercase; }
+
+a {
+  color: white; }
+
+.git-link {
+  height: 1.25rem;
+  margin-bottom: 3rem; }
 
 /*# sourceMappingURL=style.css.map */
