ready to deploy

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -67,8 +67,7 @@
   height: 12rem;
   width: 12rem;
   border-radius: 100%;
-  border: 5px solid white;
-  background-color: transparent;
+  background-color: white;
 }
 
 .projects {
