--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,11 +78,19 @@
       <div class="section" id='third'>
         <div class='contact'>
           <h2>contact</h2>
+          <p>nyc</p>
+          <p>dain.chatel@gmail.com</p>
+          <p>+1 480 313 4234</p>
+          <div>
+            <a class='git-link' href='https://github.com/dainchatel/'><i class="fa fa-github"></i></a>
+            <a class='git-link' href='https://twitter.com/dain_chat'><i class="fa fa-twitter"></i></a>
+          </div>
         </div>
       </div>
       <div class="section" id='fourth'>
         <div class='bonus'>
           <h2>bonus</h2>
+          <p>this portfolio was made with the fullpage.js and gest.js libraries</p>
         </div>
       </div>
     </div>
