--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -108,5 +108,18 @@ a {
   margin-bottom: 3rem;
 }
 
+.contact-p {
+  font-size: 1rem;
+  margin: 0 auto;
+}
+
+.contact-div {
+  display: flex;
+  justify-content: space-around;
+}
+
+.contact-head {
+  margin-bottom: 0;
+}
 
 
