--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,10 +36,10 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2>palette.js</h2>
-            <a href='#'><i id='color-icon' class="material-icons">invert_colors</i></a>
-            <p>keep track of rgb and hex values while coding</p>
-            <a class='git-link' href='#'><i class="fa fa-github"></i></a>
+            <h2>palette</h2>
+            <a href='https://sheltered-thicket-49292.herokuapp.com/'><i id='color-icon' class="material-icons">invert_colors</i></a>
+            <p>keep track of rgb and hex values, built with react + rails</p>
+            <a class='git-link' href='https://github.com/dainchatel/palette'><i class="fa fa-github"></i></a>
           </div>
         </div>
         <div class='slide'>
@@ -61,9 +61,9 @@
         <div class='slide'>
           <div class='projects'>
             <h2>horrorater</h2>
-            <a href='#'><i id='camera-icon' class="material-icons">videocam</i></a>
+            <a href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a>
             <p>a 'scariness aggregator' crud built with ruby and react on rails</p>
-            <a class='git-link' href='#'><i class="fa fa-github"></i></a>
+            <a class='git-link' href='https://github.com/dainchatel/HorrorRater'><i class="fa fa-github"></i></a>
           </div>
         </div>
         <div class='slide'>
@@ -77,11 +77,11 @@
       </div>
       <div class="section" id='third'>
         <div class='contact'>
-          <h2>contact</h2>
-          <p>nyc</p>
-          <p>dain.chatel@gmail.com</p>
-          <p>+1 480 313 4234</p>
-          <div>
+          <h2 class='contact-head'>contact</h2>
+          <p class='contact-p'>nyc</p>
+          <p class='contact-p'>dain.chatel@gmail.com</p>
+          <p class='contact-p'>+1 480 313 4234</p>
+          <div class='contact-div'>
             <a class='git-link' href='https://github.com/dainchatel/'><i class="fa fa-github"></i></a>
             <a class='git-link' href='https://twitter.com/dain_chat'><i class="fa fa-twitter"></i></a>
           </div>
@@ -89,8 +89,8 @@
       </div>
       <div class="section" id='fourth'>
         <div class='bonus'>
-          <h2>bonus</h2>
-          <p>this portfolio was made with the fullpage.js and gest.js libraries</p>
+          <h2 class='contact-head'>bonus</h2>
+          <p class='contact-p'>this portfolio was made with the fullpage.js and gest.js libraries</p>
         </div>
       </div>
     </div>
