--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@
       </div>
     </div>
     <script
-  src="http://code.jquery.com/jquery-3.1.1.js"
+  src="://code.jquery.com/jquery-3.1.1.js"
   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
   crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.js'></script>
