add response css sheet for iphone views

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,18 +2,20 @@
 <html>
   <head>
     <title>666</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://use.fontawesome.com/c741bb9792.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Overpass:100" rel="stylesheet">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 3000px)' href='/stylesheets/style.css' />
+    <link rel='stylesheet' media='screen and (min-width: 1px) and (max-width: 700px)' href='/stylesheets/phone.css' />
   </head>
   <body>
     <div id="fullpage">
       <div class="section" id='first'>
         <div class='touchless'>
           <div class='head-holder'>
-            <h1>dain</h1><h1>chatel</h1>
+            <h1>dain</h1><h1 id='last-name'>chatel</h1>
           </div>
           <h2>full stack developer</h2>
           <p>touchless // wave hand up to scroll</p>
