--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -12,7 +12,13 @@
 
 .head-holder {
   display: flex;
-  flex-direction: row; }
+  flex-direction: column;
+  text-align: left;
+   }
+
+#last-name {
+  margin-top: -3rem;
+}
 
 .touchless {
   display: flex;
@@ -20,17 +26,19 @@
   justify-content: center;
   margin: 0 auto; }
   .touchless h1 {
-    margin: 0 1rem -.5rem 1rem;
+    padding-bottom: 0;
+    margin: -1rem 1rem -.5rem 1rem;
     text-transform: uppercase;
-    font-size: 9rem;
-    letter-spacing: -1vw; }
+    font-size: 6rem;
+    letter-spacing: -1.5vw; }
   .touchless p {
     margin-top: 13rem;
     font-size: 1rem;
-    text-transform: lowercase; }
+    text-transform: lowercase;
+    color: transparent; }
   .touchless h2 {
     margin-top: -1rem;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     text-transform: lowercase; }
 
 #second {
@@ -40,11 +48,13 @@
   #second h2 {
     font-weight: normal;
     text-transform: uppercase;
-    margin: 0 auto; }
+    margin: -80px auto 20px auto;
+    font-size: 3.5rem; }
   #second p {
-    font-size: 1.25rem;
+    font-size: .8rem;
     text-transform: lowercase;
-    margin-top: -.9rem; }
+    margin-top: -.9rem;
+    width: 50vw; }
   #second .alien-p {
     margin-top: 1.5rem; }
 
@@ -68,6 +78,7 @@
   color: white; }
   #third h2 {
     font-weight: normal;
+    margin-top: -80px;
     text-transform: uppercase; }
 
 #fourth {
@@ -75,6 +86,7 @@
   color: white; }
   #fourth h2 {
     font-weight: normal;
+    margin-top: -160px;
     text-transform: uppercase; }
 
 a {
