--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2>here</h2>
+            <h2 class='project-name'>here</h2>
             <a href='https://ns-oomnvlkqtp.now.sh/'><i id='business-icon' class="material-icons">business</i></a>
             <p>a personal restaurant tracker built with react, react router + firebase</p>
             <a class= 'git-link' href='https://github.com/dainchatel/HereApp'><i class="fa fa-github"></i></a>
@@ -38,7 +38,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2>palette</h2>
+            <h2 class='project-name'>palette</h2>
             <a href='https://sheltered-thicket-49292.herokuapp.com/'><i id='color-icon' class="material-icons">invert_colors</i></a>
             <p>keep track of rgb and hex values, built with react + rails</p>
             <a class='git-link' href='https://github.com/dainchatel/palette'><i class="fa fa-github"></i></a>
@@ -46,7 +46,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2>c+me</h2>
+            <h2 class='project-name'>c+me</h2>
             <a href='https://whispering-river-97765.herokuapp.com/'><i id='chat-icon' class="material-icons">chat</i></a>
             <p>a video dating app built with node/express + postgresql</p>
             <a class= 'git-link' href='https://github.com/dainchatel/irl'><i class="fa fa-github"></i></a>
@@ -54,7 +54,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2>skycast</h2>
+            <h2 class='project-name'>skycast</h2>
             <a href='https://intense-refuge-90705.herokuapp.com/'><i id='location_on-icon' class="material-icons">location_on</i></a>
             <p>a weather app built with node/express, postgresql, dark sky + google maps REST api</p>
             <a class= 'git-link' href='https://github.com/dainchatel/nuweather'><i class="fa fa-github"></i></a>
@@ -62,7 +62,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2>horrorater</h2>
+            <h2 class='project-name'>horror rater</h2>
             <a href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a>
             <p>a 'scariness aggregator' crud built with ruby and react on rails</p>
             <a class='git-link' href='https://github.com/dainchatel/HorrorRater'><i class="fa fa-github"></i></a>
@@ -70,7 +70,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2>alien doctor</h2>
+            <h2 class='project-name'>alien doctor</h2>
             <a href='http://aliendoctor.bitballoon.com/'><div class='alien-icon'></div></a>
             <p class='alien-p'>a dom manipulation game built with jquery + css animations</p>
             <a class='git-link' href='https://github.com/dainchatel/aliendoctor'><i class="fa fa-github"></i></a>
