change fonts for alien doctor and horror rater

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2 class='project-name'>horror rater</h2>
+            <h2 class='big-names'>horror rater</h2>
             <a href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a>
             <p>a 'scariness aggregator' crud built with ruby and react on rails</p>
             <a class='git-link' href='https://github.com/dainchatel/HorrorRater'><i class="fa fa-github"></i></a>
@@ -70,7 +70,7 @@
         </div>
         <div class='slide'>
           <div class='projects'>
-            <h2 class='project-name'>alien doctor</h2>
+            <h2 class='big-names'>alien doctor</h2>
             <a href='http://aliendoctor.bitballoon.com/'><div class='alien-icon'></div></a>
             <p class='alien-p'>a dom manipulation game built with jquery + css animations</p>
             <a class='git-link' href='https://github.com/dainchatel/aliendoctor'><i class="fa fa-github"></i></a>
