--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -112,4 +112,10 @@ a {
   padding-top: 90px;
 }
 
+.big-names {
+  line-height: 3rem;
+  padding-top: 90px;
+  margin-bottom: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
