increase font size for mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,8 @@
     margin: 0 1rem -.5rem 1rem;
     text-transform: uppercase;
     font-size: 9rem;
-    letter-spacing: -1vw; }
+    letter-spacing: -1.2vw;
+    font-weight: 200; }
   .touchless p {
     margin-top: 13rem;
     font-size: 1rem;
@@ -31,7 +32,8 @@
   .touchless h2 {
     margin-top: -1rem;
     font-size: 1.8rem;
-    text-transform: lowercase; }
+    text-transform: lowercase;
+    font-weight: 200; }
 
 #second {
   background-color: #e8d7c4;
@@ -42,9 +44,11 @@
     text-transform: uppercase;
     margin: 0 auto; }
   #second p {
-    font-size: 1.25rem;
+    font-size: 2rem;
+    font-weight: 100;
     text-transform: lowercase;
-    margin-top: -.9rem; }
+    margin-top: -.9rem;
+    width: 70vw; }
   #second .alien-p {
     margin-top: 1.5rem; }
 
@@ -64,33 +68,47 @@
   font-size: 15rem; }
 
 #third {
-  background-color: #d7e9ff;
+  background-color: #a4e8b4;
   color: white; }
   #third h2 {
     font-weight: normal;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin-top: -5vh; }
+  #third p {
+    font-size: 2rem;
+    font-weight: 100; }
 
 #fourth {
   background-color: #d7c4e8;
   color: white; }
   #fourth h2 {
     font-weight: normal;
+    margin-top: -10vh;
     text-transform: uppercase; }
+  #fourth p {
+    font-size: 2rem;
+    font-weight: 100; }
 
 a {
   color: white; }
 
 .git-link {
   height: 1.25rem;
-  margin-bottom: 3rem; }
+  margin-bottom: 3rem;
+  margin-top: -2rem; }
 
 .contact-p {
   font-size: 1rem;
   margin: 0 auto; }
 
+#bottom-contact-p {
+  margin-bottom: 1rem; }
+
 .contact-div {
   display: flex;
-  justify-content: space-around; }
+  justify-content: center; }
+  .contact-div a {
+    margin: 0 1.5vw; }
 
 .contact-head {
   margin-bottom: 0; }
