--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <script src="https://use.fontawesome.com/c741bb9792.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.css' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css?family=Overpass:100" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Overpass:100,200,300,400" rel="stylesheet">
     <link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 3000px)' href='/stylesheets/style.css' />
     <link rel='stylesheet' media='screen and (min-width: 1px) and (max-width: 700px)' href='/stylesheets/phone.css' />
   </head>
@@ -63,7 +63,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2 class='big-names'>horror rater</h2>
-            <a href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a>
+            <a id='horror-icon' href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a>
             <p>a 'scariness aggregator' crud built with ruby and react on rails</p>
             <a class='git-link' href='https://github.com/dainchatel/HorrorRater'><i class="fa fa-github"></i></a>
           </div>
@@ -82,7 +82,7 @@
           <h2 class='contact-head'>contact</h2>
           <p class='contact-p'>nyc</p>
           <p class='contact-p'>dain.chatel@gmail.com</p>
-          <p class='contact-p'>+1 480 313 4234</p>
+          <p id='bottom-contact-p' class='contact-p'>+1 480 313 4234</p>
           <div class='contact-div'>
             <a class='git-link' href='https://github.com/dainchatel/'><i class="fa fa-github"></i></a>
             <a class='git-link' href='https://twitter.com/dain_chat'><i class="fa fa-twitter"></i></a>
