--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -27,6 +27,7 @@
   margin: 0 auto; }
   .touchless h1 {
     padding-bottom: 0;
+    font-weight: 300;
     margin: -1rem 1rem -.2rem 1rem;
     text-transform: uppercase;
     font-size: 5rem;
@@ -39,7 +40,8 @@
   .touchless h2 {
     margin-top: -1rem;
     font-size: 1.5rem;
-    text-transform: lowercase; }
+    text-transform: lowercase;
+    font-weight: 300; }
 
 #second {
   background-color: #e8d7c4;
@@ -51,10 +53,10 @@
     margin: -80px auto 20px auto;
     font-size: 3.5rem; }
   #second p {
-    font-size: .8rem;
+    font-size: 1.3rem;
     text-transform: lowercase;
     margin-top: -.9rem;
-    width: 50vw; }
+    width: 65vw; }
   #second .alien-p {
     margin-top: 1.5rem; }
 
@@ -75,19 +77,23 @@
   margin-top: -40px;}
 
 #third {
-  background-color: #d7e9ff;
+  background-color: rgba(164,232,180,1);
   color: white; }
   #third h2 {
     font-weight: normal;
     margin-top: -80px;
+    font-size: 4rem;
     text-transform: uppercase; }
+
+
 
 #fourth {
   background-color: #d7c4e8;
   color: white; }
   #fourth h2 {
     font-weight: normal;
-    margin-top: -160px;
+    margin-top: -100px;
+    font-size: 4rem;
     text-transform: uppercase; }
 
 a {
@@ -98,12 +104,15 @@ a {
   margin-bottom: 3rem; }
 
 .contact-p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin: 0 auto; }
 
 .contact-div {
   display: flex;
-  justify-content: space-around; }
+  justify-content: center; }
+  .contact-div .git-link {
+    margin: 0 2vw;
+  }
 
 .contact-head {
   margin-bottom: 0; }
@@ -114,8 +123,12 @@ a {
 
 .big-names {
   line-height: 3rem;
-  padding-top: 90px;
+  padding-top: 110px;
   margin-bottom: 0;
+}
+
+#horror-icon {
+  margin-bottom: -50px;
 }
 
 /*# sourceMappingURL=style.css.map */
