--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -26,10 +26,10 @@
   margin: 0 auto;
   h1 {
     margin: 0 1rem -.5rem 1rem;
-    // font-weight: normal;
     text-transform: uppercase;
     font-size: 9rem;
-    letter-spacing: -1vw;
+    letter-spacing: -1.2vw;
+    font-weight: 200;
   }
   p {
     margin-top: 13rem;
@@ -40,6 +40,7 @@
     margin-top: -1rem;
     font-size: 1.8rem;
     text-transform: lowercase;
+    font-weight: 200;
   }
 }
 
@@ -54,13 +55,16 @@
     margin: 0 auto;
   }
   p {
-    font-size: 1.25rem;
+    font-size: 2rem;
+    font-weight: 100;
     text-transform: lowercase;
     margin-top: -.9rem;
+    width: 70vw;
   }
   .alien-p {
     margin-top: 1.5rem;
   }
+
 }
 
 .alien-icon {
@@ -82,11 +86,16 @@
 }
 
 #third {
-  background-color: rgba(215,233,255,1);
+  background-color: rgba(164,232,180,1);
   color: white;
   h2 {
     font-weight: normal;
     text-transform: uppercase;
+    margin-top: -5vh;
+  }
+  p {
+    font-size: 2rem;
+    font-weight: 100;
   }
 }
 
@@ -95,7 +104,12 @@
   color: white;
   h2 {
     font-weight: normal;
+    margin-top: -10vh;
     text-transform: uppercase;
+  }
+  p {
+    font-size: 2rem;
+    font-weight: 100;
   }
 }
 
@@ -106,6 +120,7 @@ a {
 .git-link {
   height: 1.25rem;
   margin-bottom: 3rem;
+  margin-top: -2rem;
 }
 
 .contact-p {
@@ -113,9 +128,15 @@ a {
   margin: 0 auto;
 }
 
+#bottom-contact-p {
+  margin-bottom: 1rem;
+}
+
 .contact-div {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  a {
+  margin: 0 1.5vw; }
 }
 
 .contact-head {
