--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,6 +85,7 @@
           <p id='bottom-contact-p' class='contact-p'>+1 480 313 4234</p>
           <div class='contact-div'>
             <a class='git-link' href='https://github.com/dainchatel/'><i class="fa fa-github"></i></a>
+            <a class='git-link' href='https://www.linkedin.com/in/dain-chatel/'><i class="fa fa-linkedin-square"></i></a>
             <a class='git-link' href='https://twitter.com/dain_chat'><i class="fa fa-twitter"></i></a>
           </div>
         </div>
