edited project descriptions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
           <div class='projects'>
             <h2 class='project-name'>palette</h2>
             <a href='https://sheltered-thicket-49292.herokuapp.com/'><i id='color-icon' class="material-icons">invert_colors</i></a>
-            <p>keep track of rgb and hex values, built with react + rails</p>
+            <p>keep track of rgb and hex values, built with react on rails + postgresql</p>
             <a class='git-link' href='https://github.com/dainchatel/palette'><i class="fa fa-github"></i></a>
           </div>
         </div>
@@ -56,7 +56,7 @@
           <div class='projects'>
             <h2 class='project-name'>skycast</h2>
             <a href='https://intense-refuge-90705.herokuapp.com/'><i id='location_on-icon' class="material-icons">location_on</i></a>
-            <p>a weather app built with node/express, postgresql, dark sky + google maps REST api</p>
+            <p>a weather app built with node/express, postgresql, dark sky + google maps api</p>
             <a class= 'git-link' href='https://github.com/dainchatel/nuweather'><i class="fa fa-github"></i></a>
           </div>
         </div>
@@ -64,7 +64,7 @@
           <div class='projects'>
             <h2 class='big-names'>horror rater</h2>
             <a id='horror-icon' href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a>
-            <p>a 'scariness aggregator' crud built with ruby and react on rails</p>
+            <p>a 'scariness aggregator' crud built with postgresql + react on rails</p>
             <a class='git-link' href='https://github.com/dainchatel/HorrorRater'><i class="fa fa-github"></i></a>
           </div>
         </div>
@@ -72,7 +72,7 @@
           <div class='projects'>
             <h2 class='big-names'>alien doctor</h2>
             <a href='http://aliendoctor.bitballoon.com/'><div class='alien-icon'></div></a>
-            <p class='alien-p'>a dom manipulation game built with jquery + css animations</p>
+            <p class='alien-p'>a dom manipulation game built with jquery, flexbox + css animations</p>
             <a class='git-link' href='https://github.com/dainchatel/aliendoctor'><i class="fa fa-github"></i></a>
           </div>
         </div>
