change styles and change responsive styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Overpass:100,200,300,400" rel="stylesheet">
-    <link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 3000px)' href='/stylesheets/style.css' />
-    <link rel='stylesheet' media='screen and (min-width: 1px) and (max-width: 700px)' href='/stylesheets/phone.css' />
+    <link rel='stylesheet' media='screen and (min-width: 769px) and (max-width: 3000px)' href='/stylesheets/style.css' />
+    <link rel='stylesheet' media='screen and (min-width: 1px) and (max-width: 768px)' href='/stylesheets/phone.css' />
   </head>
   <body>
     <div id="fullpage">
@@ -25,7 +25,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2>projects</h2>
-            <p>I'm interested in lighthearted, lightweight, responsive design</p>
+            <p>I'm interested in lighthearted, lightweight, responsive development</p>
           </div>
         </div>
         <div class='slide'>
@@ -77,23 +77,35 @@
           </div>
         </div>
       </div>
+      <div class="section" id='fourth'>
+        <div class='about-holder'>
+          <div class='bonus-holder'>
+          <h2 class='bonus' class='bonus1'>a</h2>
+          <h2 class='bonus'>b</h2>
+          <h2 class='bonus'>o</h2>
+          <h2 class='bonus'>u</h2>
+          <h2 class='bonus'>t</h2>
+          </div>
+          <div class='about-els'>
+            <p>i wrote the movie CROC APOCALYPSE, i've been to antarctica, and i have a cat named roast beef</p>
+          </div>
+        </div>
+      </div>
       <div class="section" id='third'>
+        <div class="inset">
+<!--           <img src='./images/dain2.jpeg' alt='dain'/>
+ -->        </div>
         <div class='contact'>
           <h2 class='contact-head'>contact</h2>
           <p class='contact-p'>nyc</p>
           <p class='contact-p'>dain.chatel@gmail.com</p>
+
           <p id='bottom-contact-p' class='contact-p'>+1 480 313 4234</p>
           <div class='contact-div'>
             <a class='git-link' href='https://github.com/dainchatel/'><i class="fa fa-github"></i></a>
             <a class='git-link' href='https://www.linkedin.com/in/dain-chatel/'><i class="fa fa-linkedin-square"></i></a>
             <a class='git-link' href='https://twitter.com/dain_chat'><i class="fa fa-twitter"></i></a>
           </div>
-        </div>
-      </div>
-      <div class="section" id='fourth'>
-        <div class='bonus'>
-          <h2 class='contact-head'>bonus</h2>
-          <p class='contact-p'>this portfolio was made with the fullpage.js and gest.js libraries</p>
         </div>
       </div>
     </div>
