--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -7,7 +7,7 @@
   text-align: center; }
 
 #first {
-  background-color: rgba(255, 0, 0, 0.2);
+  background-color: rgb(229,75,75);
   color: white; }
 
 .head-holder {
@@ -44,8 +44,8 @@
     font-weight: 300; }
 
 #second {
-  background-color: #e8d7c4;
-  color: white;
+  background-color: rgb(18,23,56);
+  color: rgb(255,107,104);;
   text-align: center; }
   #second h2 {
     font-weight: normal;
@@ -57,6 +57,9 @@
     text-transform: lowercase;
     margin-top: -.9rem;
     width: 65vw; }
+  #second a {
+    color: rgb(255,107,104);
+  }
   #second .alien-p {
     margin-top: 1.5rem; }
 
@@ -64,7 +67,7 @@
   height: 10rem;
   width: 10rem;
   border-radius: 100%;
-  background-color: white; }
+  background-color: rgb(255,107,104);; }
 
 .projects {
   display: flex;
@@ -74,30 +77,82 @@
 
 #business-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
   font-size: 15rem;
-  margin-top: -40px;}
+  margin-top: -40px;
+  color: rgb(255,107,104);
+}
 
 #third {
-  background-color: rgba(164,232,180,1);
-  color: white; }
+  background-color: #0b5ce8;
+  color: transparent;
+  position: relative; }
   #third h2 {
-    font-weight: normal;
-    margin-top: -80px;
-    font-size: 4rem;
-    text-transform: uppercase; }
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: -5vh;
+    letter-spacing: 0;
+    color: #ffcc4c;
+    margin-bottom: -1vh; }
+  #third p {
+    font-size: 2rem;
+    font-weight: 100;
+    color: #ffcc4c;
+    margin: 0 auto; }
+  #third a {
+    color: transparent;
+    -webkit-text-stroke: 1px #ffcc4c;
+    font-size: 3.5rem; }
+  #third img {
+    width: 54vw;
+    height: 75vh;
+    opacity: .1; }
+
+.inset {
+  background-color: #19aaff;
+  position: absolute;
+  opacity: .3;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 54vw;
+  height: 62vh;
+  z-index: -.5; }
 
 
 
 #fourth {
-  background-color: #d7c4e8;
-  color: white; }
+  background-color: white;
+  color: transparent; }
   #fourth h2 {
-    font-weight: normal;
-    margin-top: -100px;
-    font-size: 4rem;
-    text-transform: uppercase; }
+    font-weight: 500;
+    font-size: 8rem;
+    text-transform: uppercase;
+    text-align: center;
+    padding-bottom: 0;
+    margin-top: -.6em;
+    margin-bottom: -.6em;
+    -webkit-text-stroke: 4px #e54b4b;
+    opacity: .2; }
+  #fourth .bonus-holder {
+    padding-top: 7vh;
+  }
+  #fourth p {
+    font-size: 1.5rem;
+    font-weight: 100;
+    margin-top: -11em;
+    color: black; }
+  #fourth .about-els {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 65%;
+    height: 15vh;
+    margin-top: -5vh; }
 
-a {
-  color: white; }
+.about-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .git-link {
   height: 1.25rem;
@@ -129,6 +184,10 @@ a {
 
 #horror-icon {
   margin-bottom: -50px;
+}
+
+.contact {
+  position: absolute;
 }
 
 /*# sourceMappingURL=style.css.map */
