--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@
   text-align: center; }
 
 #first {
-  background-color: rgba(255, 0, 0, 0.2);
+  background-color: #e54b4b;
   color: white; }
 
 .head-holder {
@@ -22,25 +22,26 @@
   .touchless h1 {
     margin: 0 1rem -.5rem 1rem;
     text-transform: uppercase;
-    font-size: 9rem;
+    font-size: 10rem;
     letter-spacing: -1.2vw;
-    font-weight: 200; }
+    font-weight: 500;
+    color: white; }
   .touchless p {
     margin-top: 13rem;
     font-size: 1rem;
     text-transform: lowercase; }
   .touchless h2 {
     margin-top: -1rem;
-    font-size: 1.8rem;
+    font-size: 2rem;
     text-transform: lowercase;
-    font-weight: 200; }
+    font-weight: 100; }
 
 #second {
-  background-color: #e8d7c4;
-  color: white;
+  background-color: #121738;
+  color: #ff6b68;
   text-align: center; }
   #second h2 {
-    font-weight: normal;
+    font-weight: 900;
     text-transform: uppercase;
     margin: 0 auto; }
   #second p {
@@ -51,12 +52,15 @@
     width: 70vw; }
   #second .alien-p {
     margin-top: 1.5rem; }
+  #second a {
+    color: #ff6b68; }
 
 .alien-icon {
   height: 12rem;
   width: 12rem;
   border-radius: 100%;
-  background-color: white; }
+  background-color: #ff6b68;
+  margin-top: 1.5rem; }
 
 .projects {
   display: flex;
@@ -65,52 +69,112 @@
   align-items: center; }
 
 #business-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
-  font-size: 15rem; }
+  font-size: 15rem;
+  color: #ff6b68; }
 
 #third {
-  background-color: #a4e8b4;
-  color: white; }
+  background-color: #0b5ce8;
+  color: transparent;
+  position: relative; }
   #third h2 {
-    font-weight: normal;
+    font-weight: 700;
     text-transform: uppercase;
-    margin-top: -5vh; }
+    margin-top: 3vh;
+    letter-spacing: 0;
+    color: #ffcc4c;
+    margin-bottom: -1vh; }
   #third p {
     font-size: 2rem;
-    font-weight: 100; }
+    font-weight: 100;
+    color: #ffcc4c;
+    margin: 0 auto; }
+  #third a {
+    color: transparent;
+    -webkit-text-stroke: 1px #ffcc4c;
+    font-size: 3.5rem; }
+  #third img {
+    width: 54vw;
+    height: 75vh;
+    opacity: .1; }
+
+.inset {
+  background-color: #19aaff;
+  position: absolute;
+  opacity: .3;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 54vw;
+  height: 75vh;
+  z-index: -.5; }
 
 #fourth {
-  background-color: #d7c4e8;
-  color: white; }
+  background-color: white;
+  color: transparent; }
   #fourth h2 {
-    font-weight: normal;
+    font-weight: 500;
+    margin-top: -15vh;
+    font-size: 18rem;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: -8vh;
+    margin-left: -.5vw;
+    margin-right: -.5vw;
+    padding-bottom: 0;
+    -webkit-text-stroke: 1px #e54b4b; }
+  #fourth .bonus-holder {
+    display: flex;
+    flex-direction: row; }
+  #fourth p {
+    font-size: 1.5rem;
+    font-weight: 100;
+    color: black; }
+  #fourth .about-els {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 65%;
+    height: 15vh;
+    margin-top: -5vh; }
+
+.about-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+#fifth {
+  background-color: white;
+  color: #e54b4b; }
+  #fifth h2 {
+    font-weight: 900;
     margin-top: -10vh;
     text-transform: uppercase; }
-  #fourth p {
+  #fifth p {
     font-size: 2rem;
-    font-weight: 100; }
+    font-weight: 100;
+    text-align: center; }
+  #fifth img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%; }
 
-a {
-  color: white; }
+.pic-holder {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 75vw; }
+
+.pic-p {
+  width: 50vw;
+  padding-left: 5vw; }
 
 .git-link {
   height: 1.25rem;
   margin-bottom: 3rem;
   margin-top: -2rem; }
 
-.contact-p {
-  font-size: 1rem;
-  margin: 0 auto; }
-
-#bottom-contact-p {
-  margin-bottom: 1rem; }
-
-.contact-div {
-  display: flex;
-  justify-content: center; }
-  .contact-div a {
-    margin: 0 1.5vw; }
-
-.contact-head {
-  margin-bottom: 0; }
+.contact {
+  position: absolute; }
 
 /*# sourceMappingURL=style.css.map */
