--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,7 +10,7 @@
 }
 
 #first {
-  background-color: rgba(255, 0, 0, .2);
+  background-color: rgb(229,75,75);
   color: white;
 }
 
@@ -27,9 +27,12 @@
   h1 {
     margin: 0 1rem -.5rem 1rem;
     text-transform: uppercase;
-    font-size: 9rem;
+    font-size: 10rem;
     letter-spacing: -1.2vw;
-    font-weight: 200;
+    font-weight: 500;
+    // -webkit-text-stroke: 1px rgb(255,76,6);
+    color: white;
+    // -webkit-text-stroke: 8px white;
   }
   p {
     margin-top: 13rem;
@@ -38,19 +41,19 @@
   }
   h2 {
     margin-top: -1rem;
-    font-size: 1.8rem;
+    font-size: 2rem;
     text-transform: lowercase;
-    font-weight: 200;
+    font-weight: 100;
   }
 }
 
 #second {
-  background-color: rgba(232, 215, 196, 1);
-  color: white;
+  background-color: rgb(18,23,56);
+  color: rgb(255,107,104);
   text-align: center;
 
   h2 {
-    font-weight: normal;
+    font-weight: 900;
     text-transform: uppercase;
     margin: 0 auto;
   }
@@ -64,6 +67,9 @@
   .alien-p {
     margin-top: 1.5rem;
   }
+  a {
+    color: rgb(255,107,104);
+  }
 
 }
 
@@ -71,7 +77,8 @@
   height: 12rem;
   width: 12rem;
   border-radius: 100%;
-  background-color: white;
+  background-color: rgb(255,107,104);
+  margin-top: 1.5rem;
 }
 
 .projects {
@@ -83,39 +90,127 @@
 
 #business-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
   font-size: 15rem;
+  color: rgb(255,107,104);
 }
 
 #third {
-  background-color: rgba(164,232,180,1);
-  color: white;
+  background-color: rgb(11,92,232);
+  color: transparent;
+  position: relative;
   h2 {
-    font-weight: normal;
+    font-weight: 700;
     text-transform: uppercase;
-    margin-top: -5vh;
+    margin-top: 3vh;
+    letter-spacing: 0;
+    color: rgb(255,204,76);
+    margin-bottom: -1vh;
   }
   p {
     font-size: 2rem;
     font-weight: 100;
+    color: rgba(255,204,76, 1);
+    margin: 0 auto;
   }
+  a {
+  color: transparent;
+  -webkit-text-stroke: 1px rgb(255,204,76);
+  font-size: 3.5rem;
+  }
+  img {
+    width: 54vw;
+    height: 75vh;
+    opacity: .1;
+  }
+}
+
+.inset {
+  background-color: rgb(25,170,255);
+  position: absolute;
+  opacity: .3;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 54vw;
+  height: 75vh;
+  z-index: -.5;
 }
 
 #fourth {
-  background-color: rgba(215,196,232,1);
-  color: white;
+  background-color: white;
+  color: transparent;
   h2 {
-    font-weight: normal;
+    font-weight: 500;
+    margin-top: -15vh;
+    font-size: 18rem;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: -8vh;
+    margin-left: -.5vw;
+    margin-right: -.5vw;
+    padding-bottom: 0;
+    -webkit-text-stroke: 1px rgb(229,75,75);
+  }
+  .bonus-holder {
+    display: flex;
+    flex-direction: row;
+
+  }
+  p {
+    font-size: 1.5rem;
+    font-weight: 100;
+    color: black;
+  }
+  .about-els {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 65%;
+    height: 15vh;
+    margin-top: -5vh;
+  }
+}
+
+.about-holder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#fifth {
+  background-color: white;
+  color: rgb(229,75,75);
+  h2 {
+    font-weight: 900;
     margin-top: -10vh;
     text-transform: uppercase;
+    // -webkit-text-stroke: 1px red;
   }
   p {
     font-size: 2rem;
     font-weight: 100;
+    text-align: center;
+  }
+  img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
   }
 }
 
-a {
-  color: white;
+.pic-holder {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 75vw;
 }
+
+.pic-p {
+  width: 50vw;
+  padding-left: 5vw;
+}
+
+
 
 .git-link {
   height: 1.25rem;
@@ -123,24 +218,8 @@ a {
   margin-top: -2rem;
 }
 
-.contact-p {
-  font-size: 1rem;
-  margin: 0 auto;
-}
-
-#bottom-contact-p {
-  margin-bottom: 1rem;
-}
-
-.contact-div {
-  display: flex;
-  justify-content: center;
-  a {
-  margin: 0 1.5vw; }
-}
-
-.contact-head {
-  margin-bottom: 0;
+.contact {
+  position: absolute;
 }
 
 
