--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -89,8 +89,8 @@
     font-weight: 700;
     text-transform: uppercase;
     margin-top: -7vh;
-    width: 96vw;
-    margin-left: -12vw;
+    width: 90%;
+    margin-left: -14vw;
     letter-spacing: 0;
     color: #ffcc4c;
     margin-bottom: -1vh; }
@@ -155,7 +155,8 @@
 
 .git-link {
   height: 1.25rem;
-  margin-bottom: 3rem; }
+  margin-bottom: 3rem;
+  margin-top: -1.5rem; }
 
 .contact-p {
   font-size: 1.5rem;
