--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -89,7 +89,7 @@
     font-weight: 700;
     text-transform: uppercase;
     margin-top: -7vh;
-    width: 80%;
+    font-size: 1rem;
     margin-left: -14vw;
     letter-spacing: 0;
     color: #ffcc4c;
@@ -106,7 +106,6 @@
 
 
 .inset {
-  position: absolute;
   background-color: #19aaff;
   opacity: .3;
   left: 0;
@@ -188,7 +187,7 @@
 
 .contact {
   width: 76vw;
-  height: 50vh;
+  height: 53vh;
   background-color: #0f73ef;
   text-align: center;
   display: flex;
