--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -89,7 +89,7 @@
     font-weight: 700;
     text-transform: uppercase;
     margin-top: -7vh;
-    font-size: 1rem;
+    font-size: 3rem;
     letter-spacing: 0;
     color: #ffcc4c;
     margin-bottom: -1vh; }
@@ -105,6 +105,7 @@
 
 
 .inset {
+  position: absolute;
   background-color: #19aaff;
   opacity: .3;
   left: 0;
