--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
             <h1>dain</h1><h1 id='last-name'>chatel</h1>
           </div>
           <h2>full stack developer</h2>
-          <p>touchless // wave hand up to scroll</p>
+          <p>touchless // wave hand up // or scroll</p>
         </div>
       </div>
       <div class='section' id='second'>
