--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -1,3 +1,24 @@
+@keyframes bounce {
+  0% {
+  transform:translateY(0%);
+  }
+  20% {
+    transform:translateY(3%);
+  }
+  40% {
+    transform:translateY(0%);
+  }
+  60% {
+    transform:translateY(-2%);
+  }
+  80% {
+    transform:translateY(1%);
+  }
+  100% {
+    transform:translateY(0%);
+  }
+}
+
 .fp-tableCell {
   display: flex;
   align-items: center;
@@ -32,13 +53,16 @@
     text-transform: uppercase;
     font-size: 5rem;
     letter-spacing: -1.5vw; }
-  .touchless p {
-    margin-top: 13rem;
-    font-size: 1rem;
+  .touchless .mob-scroll-dir {
+    margin-top: 10rem;
+    margin-bottom: -3rem;
+    font-size: 5rem;
     text-transform: lowercase;
-    visibility: hidden; }
-  .touchless p:after {
-    content: 'V';
+    font-weight: 100;
+    opacity: .6;
+    animation: bounce 1s infinite; }
+  .touchless .scroll-dir {
+    display: none;
   }
   .touchless h2 {
     margin-top: -1rem;
@@ -105,11 +129,7 @@
     color: transparent;
     -webkit-text-stroke: 1px #ffcc4c;
     font-size: 3rem; }
-  #bottom-contact-p {
-    text-decoration: none;
-    color: #ffcc4c;
-    font-size: 1.5rem;
-  }
+
 
 
 .inset {
@@ -201,6 +221,7 @@
   display: flex;
   flex-direction: column;
 }
+
 
 
 /*# sourceMappingURL=style.css.map */
