--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>dain chatel</title>
+    <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://use.fontawesome.com/c741bb9792.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,7 +19,8 @@
             <h1>dain</h1><h1 id='last-name'>chatel</h1>
           </div>
           <h2>full stack developer</h2>
-          <p>touchless // wave hand up // or scroll</p>
+          <p class='scroll-dir'>touchless // wave hand up // or scroll</p>
+          <p class='mob-scroll-dir'>V</p>
         </div>
       </div>
       <div class='section' id='second'>
@@ -100,7 +102,7 @@
           <p class='contact-p'>nyc</p>
           <p class='contact-p'>dain.chatel@gmail.com</p>
 
-          <p id='bottom-contact-p' class='contact-p'>+1 480 313 4234</p>
+          <p class='contact-p'>+1 480 313 4234</p>
           <div class='contact-div'>
             <a class='git-link' href='https://github.com/dainchatel/'><i class="fa fa-github"></i></a>
             <a class='git-link' href='https://www.linkedin.com/in/dain-chatel/'><i class="fa fa-linkedin-square"></i></a>
