--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>dain chatel</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://use.fontawesome.com/c741bb9792.js"></script>
@@ -20,7 +21,7 @@
           </div>
           <h2>full stack developer</h2>
           <p class='scroll-dir'>touchless // wave hand up // or scroll</p>
-          <p class='mob-scroll-dir'>V</p>
+          <p class='mob-scroll-dir'><i class="fa fa-sort-desc"></i></p>
         </div>
       </div>
       <div class='section' id='second'>
