add commitr to projects and pre load web fonts

--- a/public/stylesheets/phone.css
+++ b/public/stylesheets/phone.css
@@ -101,7 +101,7 @@
   flex-direction: column;
   align-items: center; }
 
-#business-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
+#business-icon, #queue-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
   font-size: 15rem;
   margin-top: -40px;
   color: rgb(255,107,104);
