--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -91,7 +91,7 @@
   align-items: center;
 }
 
-#business-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
+#business-icon, #queue-icon, #chat-icon, #location_on-icon, #camera-icon, #color-icon {
   font-size: 15rem;
   color: rgb(255,107,104);
 }
