--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <script src="https://use.fontawesome.com/c741bb9792.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.css' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css?family=Overpass:100,200,300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Overpass:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link rel='stylesheet' media='screen and (min-width: 769px) and (max-width: 3000px)' href='/stylesheets/style.css' />
     <link rel='stylesheet' media='screen and (min-width: 1px) and (max-width: 768px)' href='/stylesheets/phone.css' />
   </head>
@@ -29,6 +29,14 @@
           <div class='projects'>
             <h2>projects</h2>
             <p>I'm interested in lighthearted, lightweight, responsive development</p>
+          </div>
+        </div>
+        <div class='slide'>
+          <div class='projects'>
+            <h2 class='project-name'>commitr</h2>
+            <a href='https://www.npmjs.com/package/commitr'><i id='queue-icon' class="material-icons">queue</i></a>
+            <p>a node script that automatically makes github commits for job seekers, published on npm</p>
+            <a class= 'git-link' href='https://github.com/dainchatel/commitr'><i class="fa fa-github"></i></a>
           </div>
         </div>
         <div class='slide'>
@@ -129,6 +137,14 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.js'></script>
     <script type="text/javascript" src="/javascripts/gest.js"></script>
     <script src='/javascripts/fullPageLoader.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Overpass:100,200,300,400,500,600,700,800,900']
+    }
+  });
+</script>
 
   </body>
 </html>
