--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -80,7 +80,7 @@
   height: 12rem;
   width: 12rem;
   border-radius: 100%;
-  background-color: rgb(255,107,104);
+  background: radial-gradient(circle at 100px 100px, rgb(255,107,104), white);
   margin-top: 1.5rem;
 }
 
