--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -80,7 +80,7 @@
   height: 12rem;
   width: 12rem;
   border-radius: 100%;
-  background: radial-gradient(circle at 50% 120%, rgb(255,107,104), rgb(255,107,104) 10%, #055194 80%, #062745 100%);
+  background: radial-gradient(circle at 50% 120%, rgb(255,107,104), rgb(255,107,104) 10%, #055194 80%, rgb(18,23,56) 100%);
   margin-top: 1.5rem;
 }
 
