--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2 class='project-name'>commitr</h2>
-            <a href='https://www.npmjs.com/package/commitr'><i id='queue-icon' class="material-icons">queue</i></a>
+            <div class='icon-holder'><a href='https://www.npmjs.com/package/commitr'><i id='queue-icon' class="material-icons">queue</i></a></div>
             <p>a node script that automatically makes github commits for job seekers, published on npm</p>
             <a class= 'git-link' href='https://github.com/dainchatel/commitr'><i class="fa fa-github"></i></a>
           </div>
@@ -42,7 +42,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2 class='project-name'>here</h2>
-            <a href='https://ns-oomnvlkqtp.now.sh/'><i id='business-icon' class="material-icons">business</i></a>
+            <div class='icon-holder'><a href='https://ns-oomnvlkqtp.now.sh/'><i id='business-icon' class="material-icons">business</i></a></div>
             <p>a personal restaurant tracker built with react, react router + firebase</p>
             <a class= 'git-link' href='https://github.com/dainchatel/HereApp'><i class="fa fa-github"></i></a>
           </div>
@@ -50,7 +50,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2 class='project-name'>palette</h2>
-            <a href='https://sheltered-thicket-49292.herokuapp.com/'><i id='color-icon' class="material-icons">invert_colors</i></a>
+            <div class='icon-holder'><a href='https://sheltered-thicket-49292.herokuapp.com/'><i id='color-icon' class="material-icons">invert_colors</i></a></div>
             <p>keep track of rgb and hex values, built with react on rails + postgresql</p>
             <a class='git-link' href='https://github.com/dainchatel/palette'><i class="fa fa-github"></i></a>
           </div>
@@ -58,7 +58,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2 class='project-name'>c+me</h2>
-            <a href='https://whispering-river-97765.herokuapp.com/'><i id='chat-icon' class="material-icons">chat</i></a>
+            <div class='icon-holder'><a href='https://whispering-river-97765.herokuapp.com/'><i id='chat-icon' class="material-icons">chat</i></a></div>
             <p>a video dating app built with node/express + postgresql</p>
             <a class= 'git-link' href='https://github.com/dainchatel/irl'><i class="fa fa-github"></i></a>
           </div>
@@ -66,7 +66,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2 class='project-name'>skycast</h2>
-            <a href='https://intense-refuge-90705.herokuapp.com/'><i id='location_on-icon' class="material-icons">location_on</i></a>
+            <div class='icon-holder'><a href='https://intense-refuge-90705.herokuapp.com/'><i id='location_on-icon' class="material-icons">location_on</i></a></div>
             <p>a weather app built with node/express, postgresql, dark sky + google maps api</p>
             <a class= 'git-link' href='https://github.com/dainchatel/nuweather'><i class="fa fa-github"></i></a>
           </div>
@@ -74,7 +74,7 @@
         <div class='slide'>
           <div class='projects'>
             <h2 class='big-names'>horror rater</h2>
-            <a id='horror-icon' href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a>
+            <div class='icon-holder'><a id='horror-icon' href='https://radiant-mesa-86526.herokuapp.com/'><i id='camera-icon' class="material-icons">videocam</i></a></div>
             <p>a 'scariness aggregator' crud built with postgresql + react on rails</p>
             <a class='git-link' href='https://github.com/dainchatel/HorrorRater'><i class="fa fa-github"></i></a>
           </div>
