--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -100,7 +100,7 @@
   background: radial-gradient(circle at 50% 120%, rgb(255,107,104), rgb(255,107,104) 10%, #055194 80%, rgb(18,23,56) 100%);
   font-size: 15rem;
   -webkit-background-clip: text;
-  -webkit-text-stroke: 1px rgb(255,204,76);
+  -webkit-text-fill-color: transparent;
 }
 
 #third {
